[package]
name = "syncbox"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[workspace]
members = [
  "syncbox-fuzz",

  # Fuzzing
  "fuzz/atomic-task",
  "fuzz/semaphore",
  "fuzz/parker",
]

[dependencies]
cfg-if = "0.1.6"
futures = { version = "0.1.25", optional = true}

# For futures/sephamore
crossbeam-utils = "0.6.1"
