[package]
name = "syncbox-fuzz"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
cfg-if = "0.1.6"
fringe = { git = "https://github.com/carllerche/libfringe", branch = "track-nightly" }
scoped-tls = "0.1.2"
scoped-mut-tls = { version = "0.1.0", git = "http://github.com/carllerche/scoped-mut-tls" }

# Optional futures support
futures = { version = "", optional = true }
