[package]
name = "syncbox-fuzz"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
cfg-if = "0.1.6"
generator = "0.6.10"
libc = "0.2.44"
scoped-tls = "0.1.2"
scoped-mut-tls = { version = "0.1.0", git = "http://github.com/carllerche/scoped-mut-tls" }

# Optional futures support
futures = { version = "", optional = true }

# Serializing permutations to disk
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
